--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ellenhaas.github.io/app",
+  "homepage": "https://ellenhaas.github.io",
   "name": "app",
   "version": "0.1.0",
   "private": true,
