First push GH Page run deploy publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ellenhaas.github.io",
+  "homepage": "https://ellenhaas.github.io/gh-page",
   "name": "app",
   "version": "0.1.0",
   "private": true,
